[tool.poetry]
name = "lab07"
version = "0.1.0"
description = ""
authors = ["damianhealthup <damian@healthup.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.24.1"
sympy = "^1.11.1"
matplotlib = "^3.6.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
